--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,19 @@
         android:supportsRtl="true"
         tools:targetApi="31" >
         <activity
-            android:name=".MainActivity"/>
-        <activity
-            android:name=".SplashActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppSplash">
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.Spotithackfes2k25.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".History" />
+        <activity android:name=".History"
+            android:launchMode="singleTop"/>
         <activity android:name=".Settings"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.Spotithackfes2k25"
             android:label="Settings"
             android:parentActivityName=".MainActivity">
