--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:targetApi="31" >
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+        tools:targetApi="31">
         <activity
-            android:name=".MainActivity"/>
+            android:name=".SearchactivityActivity"
+            android:exported="false" />
+        <activity android:name=".MainActivity"
+            android:exported="true"
+            />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.Spotithackfes2k25">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
