--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation libs.appcompat
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
     implementation libs.material
     implementation libs.core.ktx
     implementation libs.preference
