--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.READ_SCREEN_CONTENT"/>
 
     <application
@@ -25,6 +27,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ScreenshotActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="false"
+            android:excludeFromRecents="true"
+            android:taskAffinity="com.developersunit.spot_it_hackfes2k25.Screenshot">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
         <service
             android:exported="true"
             android:name=".ButtonService"
@@ -38,6 +51,11 @@
                 android:name="android.accessibility-service"
                 android:resource="@xml/accesscibility_service_config" />
         </service>
+        <service
+            android:name=".ScreenshotService"
+            android:foregroundServiceType="mediaProjection"
+            android:exported="false"/>
+
 
     </application>
 
